--- a/inventory.ini
+++ b/inventory.ini
@@ -11,7 +11,8 @@ backend
 frontend
 
 [web]
-172.31.29.151
+172.31.91.198 COURSE="Devops with aws" TRAINER="shiva" DURATION="120HRS" ansible_user=ec2-user ansible_password=DevOps321
+172.31.83.132 COURSE="Ansible" TRAINER="shiva" DURATION="10HRS" ansible_user=ec2-user ansible_password=DevOps321
 
 [local]
 localhost
