--- a/12-vars-preference.yaml
+++ b/12-vars-preference.yaml
@@ -5,10 +5,10 @@
     GREET: "PLAY"
   vars_files:
     00-course.yaml
-  vars_prompt:
-    - name: GREET
-      prompt: enter the value
-      private: false
+  # vars_prompt:
+  #   - name: GREET
+  #     prompt: enter the value
+  #     private: false
   tasks:
     - name: print the value
       # vars:
