--- a/14-condition.yaml
+++ b/14-condition.yaml
@@ -7,5 +7,4 @@
     - nmae: print the info
       ansible.builtin.debug:
        msg: "given number is {{ my_number }} greater than 10"
-      when my_number > 10
-        
+      when: my_number > 10
