--- a/inventory.ini
+++ b/inventory.ini
@@ -14,8 +14,8 @@ frontend
 172.31.91.198 COURSE="Devops with aws" TRAINER="shiva" DURATION="120HRS" ansible_user=ec2-user ansible_password=DevOps321
 172.31.83.132 COURSE="Ansible" TRAINER="shiva" DURATION="10HRS" ansible_user=ec2-user ansible_password=DevOps321
 
-[local]
-localhost
+; [local]
+; localhost
 
 [local:vars]
 GREET=INVENTORY
