--- a/20-filters.yaml
+++ b/20-filters.yaml
@@ -5,3 +5,9 @@
     - name: handle the undefine variables
       ansible.builtin.debug:
         msg: "hello {{ person | default('shrihan') }}"
+
+    - name: convert string to list
+      vars:
+        fruits: "apple, banana, orange"
+      ansible.builtin,debug:
+        msg: " fryuits areL: {{ fruits | split (',') }}"    
