--- a/20-filters.yaml
+++ b/20-filters.yaml
@@ -9,5 +9,5 @@
     - name: convert string to list
       vars:
         fruits: "apple, banana, orange"
-      ansible.builtin,debug:
+      ansible.builtin.debug:
         msg: " fryuits areL: {{ fruits | split (',') }}"    
