--- a/20-filters.yaml
+++ b/20-filters.yaml
@@ -19,4 +19,14 @@
           duaration: 2hrs
           trainder: shiva
       ansible.builtin.debug:
-        msg: "course info: {{ course | dict2items}}"        
+        msg: "course info: {{ course | dict2items}}"     
+
+    - name: convert list into map
+      vars:
+        course:
+          {'key': 'name', 'value': 'ansible'}
+          {'key': 'duaration', 'value': '2hrs'}
+          {'key': 'trainder', 'value': 'shiva'}
+
+      ansible.builtin.debug:
+        msg: "course info: {{ course | items2dict}}"    
